# daysApp

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  dummy.json
assets/styles/: employees.css  global.css  import.css  navbar.css  page_not_found.css  schedules.css  searchbar.css  settings.css  share.css
src/: main.rs
src/client/: app.rs  mod.rs  routes.rs
src/client/components/: import_button.rs  mod.rs  navbar.rs  page_not_found.rs  searchbar.rs  share.rs
src/client/pages/: employees_page.rs  mod.rs  schedules_page.rs  settings_page.rs
src/server/: db.rs  export.rs  import.rs  mod.rs  scheduler.rs  schema.rs
