[package]
name = "days-app"
version = "0.1.0"
authors = ["felixLandlord <felix.landlord.nunoo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
# base64 = "0.22.1"
chrono = "0.4.41"
dioxus = { version = "0.6.0", features = ["router", "html"] }
dioxus-desktop = "0.6.3"
dirs = "6.0.0"
# headless_chrome = "1.0.17"
# image = "0.25.6"
# js-sys = "0.3.77"
rand = "0.9.1"
rfd = "0.15.3"
rusqlite = { version = "0.35.0", features = ["bundled"] }
rust_xlsxwriter = "0.87.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tao = "0.33.0"
# wasm-bindgen = "0.2.100"
# web-sys = { version = "0.3", features = ["Window", "Location"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
bundle = []

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# [package.metadata.bundle]
# name = "Days App"
# identifier = "com.felix.daysapp"
# # icon = ["assets/icon.icns"]   # Optional, if you have a macOS app icon
# version = "0.1.0"
# resources = ["assets/"]                                                          # Optional, folders/files to include
# copyright = "© 2025 Felix"
# short_description = "Office Days Scheduler"
# long_description = "An HR tool to assign in-office days fairly and efficiently."
